--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	</div>
 
 	<div class="page-wrap">
-		<h2>We build digital products for the students and faculty at <a href="http://txstate.edu">Texas State University</a>.</h2>
+		<h2>We build digital products for the students and faculty of <a href="http://txstate.edu">Texas State University</a>.</h2>
 	<div>
 	
 	<div class="container">
