--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 			
 			<div class="column">
 				<a href="http://www.its.txstate.edu/departments/etc/facultyprojectlab.html"><img src="images/graph.png" alt="computer" /></a>
-				<p><a href="http://www.its.txstate.edu/departments/etc/facultyprojectlab.html">Faculty Projects</a></p>
+				<p><a href="http://www.its.txstate.edu/departments/etc/facultyprojectlab.html">Tools for Faculty</a></p>
 			</div>
 			
 			<div class="column">
