--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <title>Educational Technology Center - Texas State University</title>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
 <link rel="stylesheet" href="css/spectre.min.css" />
-<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,800,800i|Patua+One" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,400i,700|Patua+One" rel="stylesheet">
 <link rel="stylesheet" href="css/main.css" />
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0/jquery.min.js"></script>
 </head>
@@ -44,6 +44,11 @@
 		
 		</div>
 		
+	</div>
+	
+	<div class="find-us">
+		<p class="github-logo"><a href="https://github.com/txstate-etc/"><i class="fa fa-github-alt" aria-hidden="true"></i></a></p>
+		<p class="github-link"><a href="https://github.com/txstate-etc/">We contribute on GitHub</a></p>
 	</div>
 
 </body>
